[tool.poetry]
name = "quara-repo"
version = "1.0.0-rc.1"
description = ""
authors = ["Guillaume Charbonnier <guillaume.charbonnier@araymond.com>"]
packages = [{ include = "repo", from = "tools" }]

[tool.poetry.dependencies]
python = "^3.7.1"
typer = "^0.3.2"
commitizen = "^2.14.2"
loguru = "^0.5.3"
pydantic = "^1.8.1"
colorama = "^0.4.4"
tomlkit = "^0.7.0"
stdlib-list = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
black = "^20.8b1"
flake8 = "^3.9.0"
ipykernel = "^5.5.3"
isort = "^5.8.0"
nest-asyncio = "^1.5.1"
nbstripout = "^0.3.9"
mypy = "^0.812"
pre-commit = "^2.12.0"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
repo = "repo.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
