[tool.poetry]
name = "quara-services"
version = "1.0.0-rc.3"
packages = [{ include = "quara" }]
description = "Cloud-native HTTP-PUB/SUB services using python."
authors = ["Guillaume Charbonnier <guillaume.charbonnier@capgemini.com>"]

[tool.poetry.dependencies]
python = "^3.8"
quara-core = "^1.0.0-rc.2"
fastapi = "^0.63.0"
async_lru = "^1.0.2"
python-multipart = "^0.0.5"
websockets = "^8.1"
uvicorn = "^0.13.4"
aiofiles = "^0.6.0"
opentelemetry-api = "^1.0.0"
opentelemetry-sdk = "^1.0.0"
opentelemetry-instrumentation = "^0.19b0"
opentelemetry-exporter-jaeger = "^1.0.0"


[tool.poetry.dev-dependencies]
quara-core = { path = "../quara-core" }
httpx = "^0.17.1"
colorama = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
