[tool.poetry]
name = "quara-mongo"
version = "1.0.0-rc.2"
packages = [{ include = "quara" }]
description = "Manage MongoDB database collections from python using quara API"
authors = ["Guillaume Charbonnier <guillaume.charbonnier@araymond.com>"]

[tool.poetry.dependencies]
python = "^3.8"
quara-core = "^1.0.0-rc.1"
motor = "^2.3.1"

[tool.poetry.dev-dependencies]
quara-core = { path = "../../../libraries/quara-core" }
colorama = "^0.4.4"

[tool.poetry.plugins."quara.databases"]
"mongo" = "quara.databases.mongo:AsyncioMongoDatabase"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
