[tool.poetry]
name = "quara-apscheduler"
version = "1.0.0-rc.1"
packages = [{ include = "quara" }]
description = "Asynchronous schedular based on apscheduler framework"
authors = ["Guillaume Charbonnier <guillaume.charbonnier@araymond.com>"]

[tool.poetry.dependencies]
python = "^3.8"
quara-core = "^1.0.0-rc.1"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]
quara-core = { path = "../../../libraries/quara-core" }
colorama = "^0.4.4"

[tool.poetry.plugins."quara.schedulers"]
"apscheduler" = "quara.schedulers._apscheduler:AsyncioScheduler"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
